--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ExpandOntology.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/ExpandOntology.fxml
@@ -21,7 +21,7 @@
             <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="btnProtege" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#openProtege" style="-fx-font-size: 15;" stylesheets="@TestStyle.css" text="IOM-Ontologie in Protégé öffnen" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+            <Button fx:id="btnProtege" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#openProtege" style="-fx-font-size: 15;" stylesheets="@TestStyle.css" text="%btn.openOntology" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                <font>
                   <Font size="23.0" />
                </font>
