--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -25,16 +26,29 @@
                         <Image url="@Logo.jpg" />
                      </image>
                   </ImageView>
-                  <Label fx:id="labelEn" layoutX="1101.0" layoutY="20.0" onMouseClicked="#setLanguageEn" text="EN" textFill="WHITE">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelDe" layoutX="1033.0" layoutY="20.0" onMouseClicked="#setLanguageDe" text="DE" textFill="WHITE">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
+                  <HBox alignment="CENTER" layoutX="1139.0" layoutY="6.0">
+                     <children>
+                        <Label fx:id="labelDe" onMouseClicked="#setLanguageDe" text="DE" textFill="WHITE">
+                           <padding>
+                              <Insets right="10.0" />
+                           </padding>
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Label>
+                        <Label fx:id="labelEn" onMouseClicked="#setLanguageEn" text="EN" textFill="WHITE">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Label>
+                     </children>
+                  </HBox>
                </children>
             </AnchorPane>
             <VBox alignment="TOP_RIGHT">
