--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Query.fxml
@@ -3,13 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane styleClass="pane" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.QueryController">
    <top>
@@ -24,32 +24,38 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
          </columnConstraints>
          <rowConstraints>
+            <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" vgrow="NEVER" />
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
+            <RowConstraints fillHeight="false" vgrow="NEVER" />
             <RowConstraints fillHeight="false" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="NEVER" />
             <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="146.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="172.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="240.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="329.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="529.0" minHeight="10.0" prefHeight="26.532928466796875" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <Button fx:id="Query3" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="1">
+            <Button fx:id="Query3" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery3" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets left="8.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="query1" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5">
+            <Button fx:id="query1" alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#executeQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="8.0" />
                </GridPane.margin>
             </Button>
-            <TextArea fx:id="test" editable="false" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="2">
+            <TextArea fx:id="test" editable="false" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets left="8.0" />
                </GridPane.margin>
+               <font>
+                  <Font size="15.0" />
+               </font>
             </TextArea>
-            <Label text="%lbl.query1" wrapText="true" GridPane.columnSpan="2147483647">
+            <Label text="%lbl.query1" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
                <font>
                   <Font size="15.0" />
                </font>
@@ -57,7 +63,7 @@
                   <Insets left="8.0" right="8.0" />
                </GridPane.margin>
             </Label>
-            <Label layoutX="10.0" layoutY="47.0" text="%lbl.query3" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+            <Label layoutX="10.0" layoutY="47.0" text="%lbl.query3" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
                <font>
                   <Font size="15.0" />
                </font>
@@ -65,14 +71,49 @@
                   <Insets left="8.0" right="8.0" />
                </GridPane.margin>
             </Label>
-            <TextArea fx:id="inputQuery" prefHeight="150.0" prefWidth="500.0" GridPane.columnSpan="5" GridPane.rowIndex="5" />
-            <Label text="%lbl.createOwnQuery" GridPane.columnSpan="3" GridPane.rowIndex="4">
+            <TextArea fx:id="inputQuery" prefHeight="130.0" prefWidth="500.0" GridPane.columnSpan="5" GridPane.rowIndex="7">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="14.0" />
+               </font></TextArea>
+            <Label text="%lbl.createOwnQuery" GridPane.columnSpan="3" GridPane.rowIndex="6">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="ownQuery" alignment="CENTER_RIGHT" layoutX="518.0" layoutY="56.0" mnemonicParsing="false" onAction="#executeOwnQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="7" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin></Button>
+            <TextArea fx:id="ownQueryResult" editable="false" layoutX="18.0" layoutY="90.0" prefHeight="130.0" prefWidth="500.0" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="10">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="14.0" />
+               </font></TextArea>
+            <Label text="%lbl.queryResults" GridPane.columnSpan="3" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets left="8.0" />
+               </GridPane.margin>
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Button fx:id="ownQuery" alignment="CENTER_RIGHT" layoutX="518.0" layoutY="56.0" mnemonicParsing="false" onAction="#executeOwnQuery" stylesheets="@TestStyle.css" text="%btn.executeQuery" GridPane.columnIndex="5" GridPane.rowIndex="5" GridPane.valignment="BOTTOM" />
-            <TextArea fx:id="ownQueryResult" editable="false" layoutX="18.0" layoutY="90.0" prefHeight="165.0" prefWidth="500.0" stylesheets="@style1.css" GridPane.columnSpan="5" GridPane.rowIndex="7" />
+            <Separator prefWidth="200.0" GridPane.columnSpan="5" GridPane.rowIndex="2" />
+            <Label text="Fixe Abfrage">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+               <padding>
+                  <Insets left="8.0" />
+               </padding>
+            </Label>
          </children>
       </GridPane>
    </top>
