--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
@@ -21,6 +21,14 @@
 	-fx-text-fill:  #294F74;
 	-fx-font-size: 15px;
 }
+
+#menuBtn:hover{
+	-fx-background-color: #eee;
+}
+
+
+
+
 #logOutBtn{
 	-fx-background-color: #234D74  , white , white;
 	-fx-text-fill:  #234D74;
@@ -100,6 +108,7 @@
       -fx-background-color: #f0f8ff;
       -fx-font-family: "Quicksand";
       -fx-border-color:#294F74;
+     
   }
   
 
