Commenting Controller and css in NewAccount

--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/NewAccount.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/NewAccount.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.NewAccountController">
+<BorderPane prefHeight="600.0" prefWidth="1000.0" styleClass="pane" stylesheets="@style1.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.NewAccountController">
    <center>
       <GridPane hgap="8.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" vgap="8.0">
         <columnConstraints>
