--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/LogIn.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/LogIn.fxml
@@ -39,19 +39,19 @@
         </rowConstraints>
          <children>
             <Label fx:id="wrongUsernameLabel" alignment="TOP_LEFT" maxWidth="200.0" textFill="#d41717" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <Button fx:id="logInBtn" mnemonicParsing="false" onAction="#userLogIn" stylesheets="@TestStyle.css" text="%btn.logIn" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <Button fx:id="logInBtn" mnemonicParsing="false" onAction="#userLogIn" stylesheets="@style1.css" text="%btn.logIn" GridPane.columnIndex="2" GridPane.rowIndex="7" />
             <Label text="%lbl.username" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="usernameTF" promptText="%lbl.username" stylesheets="@TestStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <TextField fx:id="usernameTF" promptText="%lbl.username" stylesheets="@style1.css" GridPane.columnIndex="2" GridPane.rowIndex="5" />
             <Label text="%lbl.password" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <PasswordField fx:id="passwordTF" promptText="%lbl.password" stylesheets="@TestStyle.css" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <PasswordField fx:id="passwordTF" promptText="%lbl.password" stylesheets="@style1.css" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <Hyperlink fx:id="newAccountHL" onAction="#newAccountScreen" text="%hl.createNewAccount" GridPane.columnIndex="4" GridPane.rowIndex="10" />
             <Label text="%lbl.LogIn" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
